2008-12-02  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Maciej Stachowiak.

        https://bugs.webkit.org/show_bug.cgi?id=22543
        Consolidate ActiveDOMObject page cache interaction

        * http/tests/xmlhttprequest/abort-on-leaving-page-expected.txt: Added.
        * http/tests/xmlhttprequest/abort-on-leaving-page.html: Added.
        * http/tests/xmlhttprequest/resources/slow-response.pl: Added.
        Check that XHR is aborted when navigating to a different page.

        * http/tests/xmlhttprequest/frame-load-cancelled-abort-expected.txt:
        A readystatechange event is now fired when destroying a subframe that made a request.
        This matches Firefox, although test output is somewhat different due to window.parent
        being inaccessible from a detached frame there.

2008-11-28  Cameron Zwarich  <zwarich@apple.com>

        Reviewed by Geoff Garen.

        Add tests for bug 22504: Crashes during code generation occur due to refing of ignoredResult()
        <https://bugs.webkit.org/show_bug.cgi?id=22504>

        * fast/js/ignored-result-ref-crash-expected.txt: Added.
        * fast/js/ignored-result-ref-crash.html: Added.
        * fast/js/resources/ignored-result-ref-crash.js: Added.

2008-12-02  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Cameron Zwarich.
        
        Test for https://bugs.webkit.org/show_bug.cgi?id=22537
        REGRESSION (r38745): Assertion failure in jsSubstring() at ge.com

        * fast/regex/alternative-length-miscalculation-expected.txt: Added.
        * fast/regex/alternative-length-miscalculation.html: Added.

2008-12-02  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dave Hyatt

        https://bugs.webkit.org/show_bug.cgi?id=22472
        
        Test for repainting a selected, replaced element.
        
        * fast/repaint/selected-replaced.html: Added.
        * platform/mac/fast/repaint/selected-replaced-expected.checksum: Added.